@@ -1,27 +1,34 @@
 package common.src.main;
 
 import javafx.application.Application;
+import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 import org.jspace.FormalField;
-import org.jspace.RandomSpace;
+import org.jspace.SequentialSpace;
 import org.jspace.Space;
 
 public class App extends Application {
+	// To run, add VM options: --module-path $JAVAFX_11$ --add-modules javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.controls
+	public static Space inbox;
+	public static void main(String[] args) throws InterruptedException {
+		inbox = new SequentialSpace();
+		inbox.put("startssssss");
+//		inbox.put("title1");
+		launch(args);
+	}
 
-	public static void main(String[] args) {launch(args);}
+
 
 	@Override
 	public void start(Stage primaryStage) throws Exception {
-		Parent root = FXMLLoader.load(getClass().getResource("start.fxml"));
-		Space inbox = new RandomSpace();
-		inbox.put("Hello World!");
-		Object[] tuple = inbox.get(new FormalField(String.class));
-		System.out.println(tuple[0]);
-		primaryStage.setTitle(tuple[0].toString());
+		FXMLLoader fxmlLoader = new FXMLLoader(getClass().getResource("start.fxml"));
+		fxmlLoader.setController(new StartController(inbox));
+		Parent root = fxmlLoader.load();
 		primaryStage.setScene(new Scene(root,300,275));
+		primaryStage.setTitle("Titles");
 		primaryStage.show();
 	}
 }
